projects/compiler/test/typechecker/traits/error_trait_impl_duplicate.abra
trait Foo {}
trait Bar : Foo, Foo {}

// A trait is considered duplicated regardless of the provided generics
trait Foo2<A> {}
trait Bar2 : Foo2<Int>, Foo2<Float> {}